--- a/netlify.toml
+++ b/netlify.toml
@@ -4,4 +4,4 @@
   publish = "build" # create-react-app builds to this folder, Netlify should serve all these files statically
 
 [build.environment]
-  CI = false
+  CI = "false"
